MemberNameLeak.java fails when ResolvedMethod entry is not removed

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 12
    • Affects Version/s: 12
    • Component/s: hotspot
    • b09

      ---------System.err:(42/3986)----------
      Java HotSpot(TM) 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
       stdout: [[0.697s][debug][membername,table] ResolvedMethod entry added for MemberNameLeak$Leak.callMe()V index 615
      [0.702s][debug][membername,table] ResolvedMethod entry added for java.lang.invoke.MethodHandle.linkToSpecial(Ljava/lang/Object;Ljava/lang/invoke/MemberName;)V index 186
      [0.705s][debug][membername,table] ResolvedMethod entry added for java.lang.invoke.DirectMethodHandle.internalMemberName(Ljava/lang/Object;)Ljava/lang/Object; index 879
      [0.719s][debug][membername,table] ResolvedMethod entry added for java.lang.invoke.LambdaForm$DMH/0x0000000800060840.invokeSpecial(Ljava/lang/Object;Ljava/lang/Object;)V index 897
      [0.721s][debug][membername,table] ResolvedMethod entry added for java.lang.invoke.Invokers.checkExactType(Ljava/lang/invoke/MethodHandle;Ljava/lang/invoke/MethodType;)V index 811
      [0.722s][debug][membername,table] ResolvedMethod entry added for java.lang.invoke.Invokers.checkCustomized(Ljava/lang/invoke/MethodHandle;)V index 257
      [0.722s][debug][membername,table] ResolvedMethod entry added for java.lang.invoke.MethodHandle.invokeBasic(Ljava/lang/Object;)V index 4
      [0.722s][debug][membername,table] ResolvedMethod entry added for java.lang.invoke.MethodHandle.linkToSpecial(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/invoke/MemberName;)V index 648
      [0.722s][debug][membername,table] ResolvedMethod entry added for java.lang.invoke.DirectMethodHandle$Holder.invokeSpecial(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)V index 825
      [0.723s][debug][membername,table] ResolvedMethod entry added for java.lang.invoke.LambdaForm$MH/0x0000000800060c40.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)V index 115
      [0.726s][debug][membername,table] ResolvedMethod entry found for MemberNameLeak$Leak.callMe()V index 615
      [0.726s][debug][membername,table] ResolvedMethod entry found for MemberNameLeak$Leak.callMe()V index 615
      [0.726s][debug][membername,table] ResolvedMethod entry found for MemberNameLeak$Leak.callMe()V index 615
      [0.726s][debug][membername,table] ResolvedMethod entry found for MemberNameLeak$Leak.callMe()V index 615
      [0.726s][debug][membername,table] ResolvedMethod entry found for MemberNameLeak$Leak.callMe()V index 615
      [0.727s][debug][membername,table] ResolvedMethod entry found for MemberNameLeak$Leak.callMe()V index 615
      [0.727s][debug][membername,table] ResolvedMethod entry found for MemberNameLeak$Leak.callMe()V index 615
      [0.727s][debug][membername,table] ResolvedMethod entry found for MemberNameLeak$Leak.callMe()V index 615
      [0.727s][debug][membername,table] ResolvedMethod entry found for MemberNameLeak$Leak.callMe()V index 615
      ];
       stderr: [Java HotSpot(TM) 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
      ]
       exitValue = 0

      java.lang.RuntimeException: 'ResolvedMethod entry removed' missing from stdout/stderr

          at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:150)
          at MemberNameLeak.test(MemberNameLeak.java:68)
          at MemberNameLeak.main(MemberNameLeak.java:77)

            Assignee:
            Patricio Chilano Mateo
            Reporter:
            Patricio Chilano Mateo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: