8209844: MemberNameLeak.java fails when ResolvedMethod entry is not removed

Fixed MemberNameLeak.java due to intermittent failure after 8206423

Reviewed-by: coleenp, lfoltan