src/hotspot/share/prims/resolvedMethodTable.hpp
@@ -56,8 +56,7 @@ class ResolvedMethodTable : public Hashtable<ClassLoaderWeakHandle, mtClass> {
     _table_size  = 1007
   };
 
-  static int _oops_removed;
-  static int _oops_counted;
+  static int _total_oops_removed;
 
   static bool _dead_entries;
 
@@ -94,6 +93,8 @@ public:
 
   static bool has_work() { return _dead_entries; }
   static void trigger_cleanup();
+
+  static int removed_entries_count() { return _total_oops_removed; };
 
 #if INCLUDE_JVMTI
   // It is called at safepoint only for RedefineClasses
